--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.js"></script>
-	<script src="./js/main.js" type="module"></script>
+	<script src="./js/main.js" type="module" crossorigin=""></script>
 </head>
 
 <body>
