sin pestanas script

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		© Ricaurte Rueda Abogados 2024
 	</div>
 
-	<script src="/js/pestanas.js"></script>
+	<!-- <script src="/js/pestanas.js"></script> -->
 
 </body>
 
