corrige display none y formulario adicional eliminado

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</div>
 				</form>
 			</div>
-			<div id="AgregarExpedienteTab" class="AgregarExpedientes ContenedorPestana">
+			<!-- <div id="AgregarExpedienteTab" class="AgregarExpedientes ContenedorPestana">
 				<p>Para agregar un nuevo expediente a la base de datos ingresa los datos a continuación</p>
 				<form class="FormaInputDatos">
 					<div class="ContenedorForma">
@@ -65,7 +65,7 @@
 						</div>
 					</div>
 				</form>
-			</div>
+			</div> -->
 			<div class="SeparadorFinal"> </div>
 		</div>
 	</div>
