--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
 			</div>
 
 			<div id="ConsultaTab" class="ConsultarExpedientes ContenedorPestana">
-				<p>Selecciona el día en el que quieres realizar la comparación con los expedientes de la Agencia Nacional de
-					Minería</p>
+				<p>Copia y pega los resultados de la búsqueda de la Agencia Nacional de Mineria<br>para compararlos con los contenidos en el Excel.</p>
 				<form id="theForm" class="FormaInputDatos">
 					<div class="ContenedorForma">
 						<div>
-							<p>Texto</p>
+
 							<textarea id="FechaConsulta" name="sourceText"></textarea>
 						</div>
 						<div>
