--- a/resultados.html
+++ b/resultados.html
@@ -25,11 +25,11 @@
 				<img src="Images/RicaurteLogo.jpg" />
 			</div>
 			<div class="Resultados">
-				Expedientes con coincidencias:
+				Coincidencias encontradas:
 				<br>
 				<br>
 				<br>
-				<h3> Número Expediente</h3>
+				<h3>Expedientes</h3>
 				<table class="TablaResultados" id="resultRecordNumbers">
 					<!-- <tr>
 						<td>
@@ -50,7 +50,7 @@
 				<br>
 				<br>
 				<br>
-				<h3> Placa</h3>
+				<h3>Placas</h3>
 				<table class="TablaResultados" id="resultLicences">
 				</table>
 
